# captain-brown

./: .gitignore  .pre-commit-config.yaml  2up.tex  LICENSE  README.md  get_definition.py  justfile  main.tex  make.cmd  no2en.txt  ordbok.txt  pyproject.toml  read_epub.py  shortbook.cls  tab2opf.py  Østenfor_sol.mobi
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/instructions/: python.instructions.md
.github/workflows/: build-docker-image.yml
notebooks/: 2025_03_26_dummy.ipynb
reports/2025_03_26_dummy/: dummy_report.tex
styles/: shortbook.cls
